--- a/css/style.css
+++ b/css/style.css
@@ -1298,4 +1298,13 @@ h5 {
           align-items: center;
   text-align: center;
 }
+
+.estructura {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
 /*# sourceMappingURL=style.css.map */
